# cortex7-backend

./: .env.example  .gitignore  .mcp.json  Cortex_API.postman_collection.json  Cortex_Auth_Service.postman_collection.json  MAKEFILE_COMMANDS.md  MIGRATION_CONSOLIDATION_PLAN.md  MIGRATION_IMPLEMENTATION_GUIDE.md  Makefile  README.md  alembic.ini  alembic_unified.ini  cortex-api-openapi.json  docker-compose.coolify.yml  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_models.py
.claude/: claude.md
.claude/commands/: prd-create.md  prd-tasks.md  prd-techspec.md  task-next.md  task-review.md
.cursor/rules/: README.md  api-standards.mdc  architecture.mdc  critical-validation.mdc  deployment.mdc  grpc-patterns.mdc  magic-numbers.mdc  python-standards.mdc  security.mdc  testing-standards.mdc  zen-mcp-tools.mdc
.serena/: project.yml
docker/: Dockerfile.celery  Dockerfile.debug  Dockerfile.gateway  Dockerfile.gateway.prod  Dockerfile.migrations  Dockerfile.presentation  Dockerfile.service  Dockerfile.service.prod  entrypoint-debug.sh  entrypoint.sh
migrations/: env.py
migrations/auth/: env.py
migrations/versions/: 001_initial_schema.sql  002_20251023_1530_corporate_modules.py  002_seed_data.sql  003_20251023_1540_workflows_and_tasks.py  003_add_workflows_tarefas.sql  004_20251023_1550_cache_and_utilities.py  005_20251023_1600_seed_data.py  006_20251024_rename_pt_to_en.py  007_20251027_add_employee_name.py  20251027_1600-fda0640e30da_add_financial_datawarehouse_tables.py  20251027_1608-0f804052c115_update_integers_to_bigint_for_omie_ids.py  20251027_1610-f3c222debe2a_increase_category_code_length.py  20251029_1517-463cf82e5b16_add_nextjs_chat_tables.py  20251030_1040_03b858fdc31f_add_roles_permissions_user_roles_and_.py  20251030_1103_11cc8d4ddf4a_add_composite_index_user_roles.py  20251030_1112_726db9c7e235_add_password_hash_to_users.py
migrations_unified/versions/: 001_20251023_1520_unified_foundation.py
scripts/: CHANGELOG.md  MIGRATION_007_SUMMARY.md  QUICKSTART.md  README_EXCEL_IMPORT.md  create_migration.sh  generate_keys.sh  init_db.py  migrate.sh  rotate_keys.sh  run_tests.sh  seed_employees_from_excel.py  seed_financial_from_excel.py  test_omie_bi_agents.py  validate_keys.py
services/: __init__.py
services/ai/: README.md  SETUP.md  TOOLS_DOCUMENTATION.md  main.py
services/auth/: alembic.ini  config.py  database.py  dependencies.py  main.py
services/documents/: main.py
services/financial/: main.py
services/gateway/: .env.example  README.md  __init__.py  config.py  main.py  metrics.py  middleware.py
services/hr/: main.py
services/legal/: main.py
services/presentation/: main.py  mcp_server.py  openai_spec.json  pyproject.toml  server.py
services/presentation/api/: lifespan.py  main.py  middlewares.py
services/presentation/api/v1/mock/: router.py
services/presentation/api/v1/ppt/: background_tasks.py  router.py
services/presentation/api/v1/ppt/endpoints/: anthropic.py  files.py  fonts.py  google.py  icons.py  images.py  layouts.py  ollama.py  openai.py  outlines.py  pdf_slides.py  pptx_slides.py  presentation.py  prompts.py  slide.py  slide_to_html.py
services/presentation/api/v1/webhook/: router.py
services/presentation/constants/: documents.py  llm.py  presentation.py  supported_ollama_models.py
services/presentation/enums/: image_provider.py  llm_call_type.py  llm_provider.py  tone.py  verbosity.py  webhook_event.py
services/presentation/models/: api_error_model.py  decomposed_file_info.py  document_chunk.py  generate_presentation_request.py  image_prompt.py  json_path_guide.py  llm_message.py  llm_tool_call.py  llm_tools.py  ollama_model_metadata.py  ollama_model_status.py  pptx_models.py  presentation_and_path.py  presentation_from_template.py  presentation_layout.py  presentation_outline_model.py  presentation_structure_model.py  presentation_with_slides.py  slide_layout_index.py  sse_response.py  user_config.py
services/presentation/models/sql/: async_presentation_generation_status.py  image_asset.py  key_value.py  ollama_pull_status.py  presentation.py  presentation_layout_code.py  slide.py  template.py  webhook_subscription.py
services/presentation/services/: concurrent_service.py  database.py  docling_service.py  documents_loader.py  html_to_text_runs_service.py  icon_finder_service.py  image_generation_service.py  llm_client.py  llm_tool_calls_handler.py  pptx_presentation_creator.py  score_based_chunker.py  temp_file_service.py  webhook_service.py
services/presentation/tests/: test_gemini_schema_support.py  test_image_generation.py  test_mcp_server.py  test_openai_schema_support.py  test_pptx_creator.py  test_pptx_slides_processing.py  test_presentation_generation_api.py  test_slide_to_html.py
services/presentation/utils/: asset_directory_utils.py  async_iterator.py  available_models.py  datetime_utils.py  db_utils.py  dict_utils.py  download_helpers.py  dummy_functions.py  error_handling.py  export_utils.py  file_utils.py  get_dynamic_models.py  get_env.py  get_layout_by_name.py  image_provider.py  image_utils.py  llm_client_error_handler.py  llm_provider.py  model_availability.py  ollama.py  parsers.py  ppt_utils.py  process_slides.py  schema_utils.py  set_env.py  user_config.py  validators.py
services/presentation/utils/llm_calls/: edit_slide.py  edit_slide_html.py  generate_presentation_outlines.py  generate_presentation_structure.py  generate_slide_content.py  select_slide_type_on_edit.py
services/procurement/: main.py
shared/: celery_app.py
shared/config/: settings.py
shared/cortex_auth/: README.md  USAGE.md  __init__.py  config.py  decorators.py  dependencies.py  exceptions.py  models.py  pyproject.toml  utils.py
shared/cortex_auth/tests/: __init__.py  conftest.py  test_decorators.py  test_models.py  test_utils.py
shared/database/: connection.py
shared/models/: __init__.py  audit.py  auditoria.py  base.py  company.py  datawarehouse.py  document.py  documento.py  empresa.py  financeiro.py  financial.py  hr.py  juridico.py  (+7 more)
tests/: conftest.py
(+149 files in other folders)
